Bug 510480 - cdc7f956 changes the appearance of the SDDM Breeze theme
Summary: cdc7f956 changes the appearance of the SDDM Breeze theme
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-11 07:36 UTC by daron439
Modified: 2025-10-14 14:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.20
Sentry Crash Report:


Attachments
before (108.42 KB, image/png)
2025-10-11 07:36 UTC, daron439
Details
after (88.14 KB, image/png)
2025-10-11 07:37 UTC, daron439
Details

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2025-10-11 07:36:31 UTC
Created attachment 185683 [details]
before

SUMMARY
https://invent.kde.org/frameworks/kirigami/-/commit/cdc7f956100cea13fdb45b30d705d735a066e700 changes the appearance of the SDDM Breeze theme.

STEPS TO REPRODUCE
1. Update to cdc7f956100cea13fdb45b30d705d735a066e700
2. Start sddm

OBSERVED RESULT
The outline around the avatar and username is now black

EXPECTED RESULT
No changes

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.9.2
Comment 1 daron439 2025-10-11 07:37:11 UTC
Created attachment 185684 [details]
after
Comment 2 Bug Janitor Service 2025-10-13 16:38:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1941
Comment 3 Arjen Hiemstra 2025-10-14 12:17:09 UTC
Git commit 4b6701dfc30e78f08d5677856f94169e0cc6bc50 by Arjen Hiemstra.
Committed on 13/10/2025 at 16:37.
Pushed by ahiemstra into branch 'master'.

platform: Include child Quick items when updating child PlatformTheme instances

The item hierarchy may be slightly different from the QObject hierarchy.
We want to make sure that we update both child objects and child items,
so include child items when updating children in PlatformTheme.

M  +25   -7    src/platform/platformtheme.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/4b6701dfc30e78f08d5677856f94169e0cc6bc50