platform: Include child Quick items when updating child PlatformTheme instances

The item hierarchy may be slightly different from the QObject hierarchy.
We want to make sure that we update both child objects and child items,
so include child items when updating children in PlatformTheme.

BUG: 510480